--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,15 @@ plugins {
 
 group = 'com.finartz.airplanereservations'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-repositories {
-	mavenCentral()
+allprojects {
+	sourceCompatibility = '1.8'
+	repositories {
+		mavenCentral()
+		jcenter()
+	}
 }
+
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -22,6 +26,12 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	implementation 'org.modelmapper:modelmapper:2.3.0'
+	testImplementation('junit:junit:4.13')
+	testRuntime("org.junit.vintage:junit-vintage-engine:5.2.0")
+
+	//testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.1.0'
+	testCompile "org.mockito:mockito-core:2.+"
+
 }
 
 test {
